# qt-settings

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conf.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: LICENSE  README.md  README.txt  auto_install_post_build.cmake  compiler_settings.cmake  copy_dirs_if_diff.cmake  copy_lib_interface_headers.cmake  generate_lib_exports_header.cmake  get_timezone.py  shared_exports.h.in  static_exports.h.in
include/lzl/: lzl_function_traits.h  lzl_lib_settings_exports.h  lzl_settings.h  settings
lzl-qt-settings/: CMakeLists.txt  README.md  function_traits  lzl_convert_qt_variant.h  lzl_function_traits.h  lzl_lib_settings_exports.h  lzl_settings.cpp  lzl_settings.h  settings
lzl-qt-settings/functional/: README.md
lzl-qt-settings/functional/cxx17/: function_traits.h
settings/: convert_qvariant.h  function_traits.h  lambda_traits.h  settings.cpp  settings.h  signalregister.h  type_handling.h
